--- a/css/style.css
+++ b/css/style.css
@@ -54,26 +54,49 @@
 
 .conteiner-main{
 
-    background-color: lightcoral;
+    background-color: black;
     height: calc(100vh - 120px);
     overflow: auto;
     flex-wrap: wrap;
+    margin: 0;
+    justify-content: center;
+    gap: 20px 10px;
+    
+    
+}
+
+
+.box{
+    width: calc(100% /7 - 20px);
+    position: relative;
+    
 }
 
 .miniatura{
-    width: calc(100% / 7);
-    background-color: black;
-    height: 200px;
-    border: 2px solid white;
-    margin: 40px 80px 40px 80px;
-    
+    height: 100%;
+    width: 100%;
+
 }
- 
 
+.user{
+    position: absolute;
+    bottom: 0vh;
+    left: 0;
+    color: white;
+    text-align: left;
 
+}
 
-
-
+.opaco{
+    position: absolute;
+    bottom: 0vh;
+    left: 0;
+    height: 25px;
+    width: 150px;
+    background-color: #556371;
+    padding-top: 5px;
+    opacity: 0.5;
+}
 /*----------
     Footer 
  ----------*/
