--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,11 @@
  .eccezione{
     color: #44be01;
  }
+
+ .end{
+    background-color: #4a4a4a;
+    color: #f50014;
+    padding: 35px;
+    font-weight: bold;
+
+ }
