--- a/css/style.css
+++ b/css/style.css
@@ -2,57 +2,58 @@
     Reset 
  ----------*/
 
- *{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
- }
+}
 
- /*----------
+/*----------
     Header 
  ----------*/
 
- .row{
+.row {
     display: flex;
- }
+}
 
- .conteiner-header .row{
+.conteiner-header .row {
     background-color: black;
     height: 40px;
     align-items: center;
     justify-content: end;
- }
+}
 
- .conteiner-logo ul {
-   color: white;
-   list-style-type: none;
-   
-   
- }
+.conteiner-logo ul {
+    color: white;
+    list-style-type: none;
 
- li{
+
+}
+
+li {
     background-color: #4a4a4a;
     padding: 5px;
     margin: 5px;
     border-radius: 5px;
     font-size: 10px;
 
- }
+}
 
- .fa-bars{
+.fa-bars {
     padding-right: 5px;
- }
+}
 
- .fa-bars, .fa-maximize{
+.fa-bars,
+.fa-maximize {
     font-size: 13px;
- }
+}
 
 /*----------
     Main 
  ----------*/
 
-.conteiner-main{
+.conteiner-main {
 
     background-color: black;
     height: calc(100vh - 120px);
@@ -61,24 +62,24 @@
     margin: 0;
     justify-content: center;
     gap: 20px 10px;
-    
-    
+
+
 }
 
 
-.box{
+.box {
     width: calc(100% /7 - 20px);
     position: relative;
-    
+
 }
 
-.miniatura{
+.miniatura {
     height: 100%;
     width: 100%;
 
 }
 
-.user{
+.user {
     position: absolute;
     bottom: 0vh;
     left: 0;
@@ -87,7 +88,7 @@
 
 }
 
-.opaco{
+.opaco {
     position: absolute;
     bottom: 0vh;
     left: 0;
@@ -97,46 +98,47 @@
     padding-top: 5px;
     opacity: 0.5;
 }
+
 /*----------
     Footer 
  ----------*/
 
- .conteiner-footer{
-    background-color: black;
+.conteiner-footer {
+    background-color: #222222;
     height: 80px;
     align-items: center;
     justify-content: space-between;
     color: white;
- }
+}
 
- .tasti{
-    padding:10px;
+.tasti {
+    padding: 10px;
     text-align: center;
-    
- }
 
- .icons{
+}
+
+.icons {
     font-size: 30px;
     padding: 5px;
- }
+}
 
- h3{
+h3 {
     font-size: 13px;
- }
+}
 
- .arrow{
+.arrow {
     align-items: center;
     padding: 5px;
- }
+}
 
- .eccezione{
+.eccezione {
     color: #44be01;
- }
+}
 
- .end{
+.end {
     background-color: #4a4a4a;
     color: #f50014;
     padding: 35px;
     font-weight: bold;
 
- }
+}
