--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ li {
     width: 150px;
     background-color: #556371;
     padding-top: 5px;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 /*----------
@@ -138,7 +138,9 @@ h3 {
 .end {
     background-color: #4a4a4a;
     color: #f50014;
-    padding: 35px;
     font-weight: bold;
+    height: 80px;
+    align-items: center;
+    padding: 10px;
 
 }
